feat(auth): Backup auth | password reset | Improve flow

--- a/myapp/templates/dashboard.html
+++ b/myapp/templates/dashboard.html
@@ -12,6 +12,7 @@
                     <p class="lead">You are successfully logged in.</p>
                     <div class="mt-4">
                         <a href="{{ url_for('edit_profile') }}" class="btn btn-primary btn-lg me-2">Edit Profile</a>
+                        <a href="{{ url_for('generate_backup_codes') }}" class="btn btn-outline-primary btn-lg">Backup Codes</a>
                         <a href="{{ url_for('logout') }}" class="btn btn-outline-danger btn-lg">Logout</a>
                     </div>
                 </div>
