--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -23,8 +23,17 @@
                 </form>
 
                 <div class="text-center mt-3">
-                    <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign Up</a></p>
+                  <p class="text-muted mb-3">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#forgotPasswordModal">
+                      Forgot your password?
+                    </a>
+                  </p>
+
+                  <p>
+                    Don't have an account? <a href="{{ url_for('signup') }}">Sign Up</a>
+                  </p>
                 </div>
+
 
                 <hr class="my-4">
 
@@ -47,6 +56,29 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content border-0 shadow">
+      <div class="modal-header">
+        <h5 class="modal-title fw-bold" id="forgotPasswordModalLabel">Recover Access</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <p class="mb-4">Choose how you'd like to regain access to your account:</p>
+
+        <div class="d-grid gap-2">
+          <a href="{{ url_for('request_password_reset') }}" class="btn btn-primary">
+            Reset via Email
+          </a>
+          <a href="{{ url_for('backup_login') }}" class="btn btn-outline-secondary">
+            Use a Backup Code
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
 
